Fix button text overflow

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -130,7 +130,7 @@ a.button {
   color: #303030;
   line-height: 25px;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 14px;
   padding: 12px 8px 12px 8px;
   display: block;
   float: left;
